# spirit_toy_code

./: .clang-format  .gitignore  CMakeLists.txt  Definitions.hpp  State.cpp  State.hpp  backend.hpp  backend_handle.hpp  compile.sh  definitions.hpp  main.cpp  notes.md
.github/workflows/: ci.yml
CMake/: AddTest.cmake  CompilerFlags.cmake
api/include/: Api_State.hpp  DLL_Define_Export.h  Hamiltonian.h  Method.h  State.h
api/src/: Hamiltonian.cpp  Method.cpp  State.cpp
include/: Device_State.hpp  Hamiltonian.hpp  Host_State.hpp  Stencil.hpp  backend.hpp
include/backend_cpu/: cpu_helper_functions.hpp
include/backend_cuda/: cuda_helper_functions.hpp
include/implementation/: Device_State.hpp  Fields.hpp  Hamiltonian.hpp  Host_State.hpp  Kernels.hpp  Lambda.hpp  Memory.hpp  Method_Minimize.hpp  Solver_Gradient_Descent.hpp  Solver_VP.hpp  State.hpp  Stencil.hpp  Stencil_Evaluator.cpu.hpp  Stencil_Evaluator.cuda.hpp  Stencil_Evaluator.hpp  Stencil_Terms.hpp  backend.hpp
include/implementation/backend_cpu/: cpu_helper_functions.hpp
include/implementation/backend_cuda/: cuda_helper_functions.hpp
include/interface/: Hamiltonian.hpp  Method.hpp  State.hpp  Stencil.hpp
src/: backend_cpu.cpp  backend_cuda.cpp  backend_cuda.cu  backend_vulkan.cpp
src/backend_cpu/: Device_State.cpp  backend_cpu.cpp  backend_handle.cpp
src/backend_cuda/: Device_State.cu  backend_cuda.cu  backend_handle.cu
src/backend_vulkan/: backend_handle.cpp  backend_vulkan.cpp
src/implementation/: Kernels.cpu.cpp  Kernels.cuda.cu  State.cpp
src/implementation/backend_cpu/: Device_State.cpp  backend_cpu.cpp
src/implementation/backend_cuda/: Device_State.cu  backend_cuda.cu
src/interface/: Method.cpp  State.cpp
temp/: compile_proof.sh  proof_of_concept.cu
tests/: test_api.cpp  test_device_vector.cpp  test_kernels.cpp  test_stencil_evaluator.cpp
